sort list of compared displayed games, to avoid flaky tests